--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
 
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
+
 // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
